name:                hanum
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wisn/hanum#readme
license:             MIT
license-file:        LICENSE
author:              Wisnu Adi Nurcahyo
maintainer:          wisnu@nurcahyo.me
copyright:           'Copyright: (c) 2017 Wisnu Adi Nurcahyo'
category:            Static Analysis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hanum
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hanum
  default-language:    Haskell2010

test-suite hanum-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hanum
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wisn/hanum
